[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/Gun.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/8bitoperator.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/themes/8b_font_theme.tres" type="Theme" id=3]

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0, 0.772549, 1, 1 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.164706, 0.164706, 0.164706, 1 )

[sub_resource type="DynamicFont" id=13]
size = 22
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=16]
default_font = SubResource( 13 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 4, 4 )

[node name="ShotOrigin" type="Node2D" parent="."]

[node name="ShotTimer" type="Timer" parent="."]
one_shot = true

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[node name="UI" type="Node2D" parent="."]

[node name="AmmoBar" type="ProgressBar" parent="UI"]
margin_left = -84.5
margin_top = 71.5
margin_right = 85.5
margin_bottom = 90.5
grow_horizontal = 2
theme = ExtResource( 3 )
custom_styles/fg = SubResource( 14 )
custom_styles/bg = SubResource( 15 )
value = 50.0
percent_visible = false

[node name="AmmoLabel" type="Label" parent="UI"]
margin_left = -204.0
margin_top = 94.0
margin_right = 204.0
margin_bottom = 128.0
theme = SubResource( 16 )
text = "XX/XX"
align = 1
valign = 1

[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
